test/valid/fc36994_TestOverloading/TestOverloadString.plume
/**
 * For testing string overloading
 * @author 36994, César Santos
 */
 class TestOverloadString extends Object is
  method main : () -> String is
    (new CorrectOverloading()).testString("a","b") //expect ab