test/invalid/fc36994_TestInheritance/CycleExtending1Test.plume
/**
 * For testing an inheritance cycle
 * @author 36994, César Santos
 */
class CycleExtending1Test extends CycleExtending2Test is
  methog nothing1 : () -> Boolean is
    true